--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -54,8 +54,8 @@
 }
 
 .postsBlockDT{
-    color: black;
-    background-color: rgb(0, 119, 12);
+    color: rgb(0, 119, 12);
+    background-color: black;
 }
 
 .addPostButtonDT{
