--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -20,3 +20,10 @@
   margin-left: 15px;
 }
 
+.message{
+  color: rgb(0, 119, 12);
+}
+
+.postDT{
+  color: rgb(0, 119, 12);
+}
